--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "country-flag-icons": "^1.5.9",
     "date-fns": "^3.3.1",
+    "i18next": "^23.8.0",
+    "i18next-browser-languagedetector": "^7.2.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.316.0",
     "match-sorter": "^6.3.3",
@@ -31,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.3",
+    "react-i18next": "^14.0.1",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.11.0",
     "sonner": "^1.3.1",
